--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,8 @@
 
 <head>
   <!-- 设置CSP安全策略 -->
-  <meta http-equiv="Content-Security-Policy"
-    content="default-src self; img-src vscode-resource: 'self' ; script-src vscode-resource: 'self' 'unsafe-inline'; style-src vscode-resource: 'self' 'unsafe-inline'; font-src vscode-resource: 'self' 'unsafe-inline'; connect-src vscode-resource: 'self' 'unsafe-inline'" />
+  <!-- <meta http-equiv="Content-Security-Policy"
+    content="default-src self; img-src vscode-resource: 'self' ; script-src vscode-resource: 'self' 'unsafe-inline'; style-src vscode-resource: 'self' 'unsafe-inline'; font-src vscode-resource: 'self' 'unsafe-inline'; connect-src vscode-resource: 'self' 'unsafe-inline'" /> -->
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width,initial-scale=1.0" />
